[package]
name = "min_gl"
version = "0.3.0"
authors = ["Cem Geçgel <gecgelcem@outlook.com>"]
edition = "2021"
description = "Minimal boilerplate code for OpenGL applications with glfw and glad."
readme = "README.md"
repository = "https://github.com/Waistax/min_gl"
license = "MIT OR Apache-2.0"
keywords = ["opengl", "windowing", "glfw", "glad"]
categories = [
    "external-ffi-bindings",
    "game-development",
    "graphics",
    "rendering::graphics-api",
]

[dependencies]
glfw = "0.48.0"
min_timer = { version = "0.4.0", optional = true }
